--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "cross-env NODE_ENV=production nodemon server.js",
+    "watch:js":" parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js ",
+    "build:js":" parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js ",
     "debug": "ndb server.js"
   },
   "author": "Abdullah Shakir",
@@ -13,6 +15,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -37,6 +41,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.9",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "parcel-bundler": "^1.12.5"
   }
 }
